--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -213,7 +213,7 @@ h6 {
 }
 
 .portfolio-item .caption .caption-content {
-  color: #fff;
+  color: rgba(255, 255, 255, 0);
   margin: auto 2rem 2rem;
 }
 
@@ -253,9 +253,12 @@ h6 {
     clip-path: inset(2rem);
   }
   .portfolio-item:hover .caption {
-    background-color: rgba(29, 128, 159, 0.9);
+    background-color: rgb(41, 41, 41);
     -webkit-clip-path: inset(2rem);
     clip-path: inset(2rem);
+  }
+  .caption:hover {
+    color: rgb(255, 255, 255);
   }
 }
 
