--- a/custom.css
+++ b/custom.css
@@ -15,10 +15,12 @@ body {
 .content-section {
   padding-top: 7.5rem;
   padding-bottom: 7.5rem;
+  background-color: rgb(0, 0, 0);
 }
 
 .content-section-heading h2 {
   font-size: 3rem;
+  color: white;
 }
 
 .content-section-heading h3 {
@@ -254,7 +256,7 @@ h6 {
     clip-path: inset(2rem);
   }
   .portfolio-item:hover .caption {
-    background-color: rgb(41, 41, 41);
+    background-color: rgb(41, 125, 173);
     -webkit-clip-path: inset(2rem);
     clip-path: inset(2rem);
     color: rgb(255, 255, 255);
