--- a/custom.css
+++ b/custom.css
@@ -260,7 +260,7 @@ h6 {
     clip-path: inset(2rem);
   }
   .portfolio-item:hover .caption {
-    background-color: rgb(41, 125, 173);
+    background-color: rgb(255, 255, 255);
     -webkit-clip-path: inset(2rem);
     clip-path: inset(2rem);
     color: rgb(255, 255, 255);
@@ -270,6 +270,8 @@ h6 {
 footer.footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
+  background-color: black;
+  color: white
 }
 
 footer.footer .social-link {
@@ -278,13 +280,13 @@ footer.footer .social-link {
   width: 4rem;
   line-height: 4.3rem;
   font-size: 1.5rem;
-  background-color: #1D809F;
+  background-color: rgb(0, 0, 0);
   transition: background-color 0.15s ease-in-out;
-  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 3px 0 rgb(0, 0, 0);
 }
 
 footer.footer .social-link:hover {
-  background-color: #155d74;
+  background-color: #000000;
   text-decoration: none;
 }
 
