--- a/custom.css
+++ b/custom.css
@@ -2,6 +2,7 @@ body,
 html {
   width: 100%;
   height: 100%;
+  background-color: black;
 }
 
 body {
@@ -81,7 +82,7 @@ h6 {
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/mountainsbig.jpg");
+  background: url("../img/mountainsbig.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -111,7 +112,7 @@ h6 {
   height: 100%;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background: #1D809F;
+  background: rgb(255, 255, 255);
   border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -127,14 +128,13 @@ h6 {
 .sidebar-nav li.sidebar-nav-item a {
   display: block;
   text-decoration: none;
-  color: #fff;
+  color: rgb(0, 0, 0);
   padding: 15px;
 }
 
 .sidebar-nav li a:hover {
   text-decoration: none;
-  color: #fff;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(0, 0, 0, 0.103);
 }
 
 .sidebar-nav li a:active,
@@ -144,7 +144,7 @@ h6 {
 
 .sidebar-nav > .sidebar-brand {
   font-size: 1.2rem;
-  background: rgba(52, 58, 64, 0.1);
+  background: rgba(0, 0, 0, 0.1);
   height: 80px;
   line-height: 50px;
   padding-top: 15px;
@@ -174,7 +174,7 @@ h6 {
   width: 50px;
   height: 50px;
   text-align: center;
-  color: #fff;
+  color: rgb(255, 255, 255);
   background: rgba(52, 58, 64, 0.5);
   line-height: 50px;
   z-index: 999;
@@ -190,7 +190,7 @@ h6 {
 
 .service-icon {
   background-color: #fff;
-  color: #1D809F;
+  color: rgb(0, 0, 0);
   height: 7rem;
   width: 7rem;
   display: block;
@@ -291,17 +291,17 @@ footer.footer .social-link:hover {
 }
 
 a {
-  color: #1D809F;
+  color: rgb(255, 255, 255);
 }
 
 a:hover, a:focus, a:active {
-  color: #155d74;
+  color: #ffffff;
 }
 
 .btn-primary {
-  background-color: #1D809F !important;
-  border-color: #1D809F !important;
-  color: #fff !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-color: rgb(255, 255, 255) !important;
+  color: rgb(0, 0, 0) !important;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
