--- a/custom.css
+++ b/custom.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  font-family: 'Source Sans Pro';
+  font-family: 'Roboto', sans-serif;
 }
 
 .btn-xl {
@@ -27,6 +27,10 @@ body {
 .content-section-heading h3 {
   font-size: 1rem;
   text-transform: uppercase;
+}
+
+h1 {
+  font-family: 'Patrick Hand SC', cursive;
 }
 
 h1,
@@ -305,8 +309,8 @@ a:hover, a:focus, a:active {
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #155d74 !important;
-  border-color: #155d74 !important;
+  background-color: #a0a0a0 !important;
+  border-color: #660b0b !important;
 }
 
 .btn-secondary {
