--- a/custom.css
+++ b/custom.css
@@ -272,6 +272,7 @@ h6 {
     margin: 0;
   }
   .portfolio-item .caption {
+    transition: 0.25s ease-out, background-color 0.25s;
     -webkit-transition: -webkit-clip-path 0.25s ease-out, background-color 0.25s;
     -webkit-clip-path: inset(0px);
     clip-path: inset(0px);
@@ -283,6 +284,7 @@ h6 {
     margin-bottom: 5rem;
   }
   .portfolio-item img {
+    transition: 0.25s ease-out;
     -webkit-transition: -webkit-clip-path 0.25s ease-out;
     -webkit-clip-path: inset(-1px);
     clip-path: inset(-1px);
