--- a/custom.css
+++ b/custom.css
@@ -48,6 +48,7 @@ h6 {
 
 .lead {
   font-weight: 550;
+  text-align: left;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -96,7 +97,7 @@ h6 {
 }
 
 .masthead {
-  min-height: 30rem;
+  min-height: 50rem;
   position: relative;
   display: table;
   width: 100%;
@@ -135,7 +136,6 @@ h6 {
 .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 250px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -144,7 +144,7 @@ h6 {
 .sidebar-nav li.sidebar-nav-item a {
   display: block;
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: rgba(0, 0, 0, 0.507);
   padding: 15px;
 }
 
@@ -178,7 +178,7 @@ h6 {
 }
 
 #sidebar-wrapper.active {
-  right: 250px;
+  right: 130px;
   width: 250px;
   transition: all 0.4s ease 0s;
 }
