--- a/custom.css
+++ b/custom.css
@@ -105,6 +105,10 @@ h6 {
     padding-bottom: 5%;
   }
 
+  .caption-content p {
+    font-size: 0.1rem;
+  }
+
 }
 
 @media (max-width: 992px) {
@@ -158,6 +162,9 @@ h6 {
   }
   .masthead h1 {
     font-size: 5.5rem;
+  }
+  .caption-content p {
+    font-size: 0.1rem;
   }
 }
 
@@ -302,7 +309,7 @@ h6 {
 .portfolio-item:hover .caption .caption-content p {
   color: rgb(0, 0, 0);
   font-weight: 300;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   visibility: visible;
 }
 
@@ -334,10 +341,10 @@ h6 {
     clip-path: inset(2rem);
   }
   .portfolio-item:hover .caption {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     -webkit-clip-path: inset(2rem);
-    clip-path: inset(2rem);
-    color: rgb(255, 255, 255);
+    clip-path: inset(1.9rem);
+    color: rgb(0, 0, 0);
   }
 }
 
